--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ jobs:
         with:
           node-version: 18
       - run: npm ci
-      - run: npm test -- --watchAll=false
       - run: npm test -- --coverage --watchAll=false
       - name: Upload to Codecov
         uses: codecov/codecov-action@v3
-
+        with: 
+          token: ${{ secrets.CODECOV_TOKEN }}
